--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>114-115-Day-04</title>
 </head>
 <body>
-    
+    <h1 style="background-color: blue; color: white; text-align: center;">iCET</h1>
+    <P style="background-color: black; color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
 </body>
 </html>
