--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>114-115-Day-04</title>
+
+    <style>
+        h1{
+            background-color: brown;
+            color: white;
+            text-align: center;
+        }
+        p{
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    <h1 style="background-color: blue; color: white; text-align: center;">iCET</h1>
-    <P style="background-color: black; color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
+    <h1>iCET</h1>
+    <h1>Hello iCET</h1>
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
 </body>
 </html>
