--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
             text-align: center;
         }
         p{
-            background-color: black;
-            color: white;
+            background-color: aquamarine;
+        }
+        #icet01{
+            background-color: green;
+        }
+        #icet02{
+            background-color: blue;
         }
     </style>
 </head>
 <body>
     <h1>iCET</h1>
-    <h1>Hello iCET</h1>
+    <h1 id="icet01">Hello iCET...01</h1>
+    <h1 id="icet02">Hello iCET...02</h1>
     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
 </body>
 </html>
