--- a/index.html
+++ b/index.html
@@ -20,12 +20,23 @@
         #icet02{
             background-color: blue;
         }
+        .group01{
+            background-color: brown;
+        }
+        .group02{
+            background-color: bisque;
+        }
     </style>
 </head>
 <body>
     <h1>iCET</h1>
     <h1 id="icet01">Hello iCET...01</h1>
     <h1 id="icet02">Hello iCET...02</h1>
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
+    <P class="group01">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
+    <P class="group02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
+    <P class="group01">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
+    <P class="group02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
+    <P class="group01">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
+    <P class="group02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P> 
 </body>
 </html>
