--- a/about.html
+++ b/about.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>About iCET</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus officia ipsa dicta magni non quis cumque incidunt voluptatibus vel quos impedit obcaecati reprehenderit voluptas, nihil amet nesciunt modi labore sunt!</p>
+    <p class="group01">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus officia ipsa dicta magni non
+        quis cumque incidunt voluptatibus vel quos impedit obcaecati reprehenderit voluptas, nihil amet nesciunt modi
+        labore sunt!</p>
 </body>
+
 </html>
