--- a/index.html
+++ b/index.html
@@ -1,42 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>114-115-Day-04</title>
-
-    <style>
-        h1{
-            background-color: brown;
-            color: white;
-            text-align: center;
-        }
-        /*p{
-            background-color: aquamarine;
-        }*/
-        #icet01{
-            background-color: green;
-        }
-        #icet02{
-            background-color: blue;
-        }
-        .group01{
-            background-color: brown;
-        }
-        .group02{
-            background-color: bisque;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>iCET</h1>
     <h1 id="icet01">Hello iCET...01</h1>
     <h1 id="icet02">Hello iCET...02</h1>
-    <P class="group01">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
-    <P class="group02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
-    <P class="group01">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
-    <P class="group02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
-    <P class="group01">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P>
-    <P class="group02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic reiciendis ipsam, et nostrum.</P> 
+    <P class="group01">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis
+        molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic
+        reiciendis ipsam, et nostrum.</P>
+    <P class="group02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis
+        molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic
+        reiciendis ipsam, et nostrum.</P>
+    <P class="group01">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis
+        molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic
+        reiciendis ipsam, et nostrum.</P>
+    <P class="group02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis
+        molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic
+        reiciendis ipsam, et nostrum.</P>
+    <P class="group01">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis
+        molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic
+        reiciendis ipsam, et nostrum.</P>
+    <P class="group02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem deleniti in sint, omnis
+        molestias culpa doloremque commodi perspiciatis veniam placeat delectus dolorum, praesentium minus ipsum hic
+        reiciendis ipsam, et nostrum.</P>
 </body>
+
 </html>
